--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,8 +3,9 @@
 }
 
 .header h1 {
-    margin: 0;
-    text-align:start;
+    margin-top: 2%;
+    text-align: center;
     color: white;
     font-size: 3rem;
+    grid-column: auto;
 }
