--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,19 @@
 .header {
-    height: 100%;
+  height: 100%;
 }
 
 .header h1 {
-    margin-top: 2%;
-    text-align: center;
-    color: white;
-    font-size: 3rem;
-    grid-column: auto;
+  margin-top: 2%;
+  text-align: center;
+  color: white;
+  font-size: 3rem;
+  grid-column: auto;
+}
+
+.header h1:hover {
+  color: #111893;
+  text-transform: uppercase;
+  font-weight: bolder;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
 }
