--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,207 @@
   display: grid;
   overflow: hidden;
 }
+
+/*HEADER*/
+.header {
+  height: 100%;
+  background: #111893;
+}
+
+.header h1 {
+  margin-top: 2%;
+  text-align: center;
+  color: white;
+  font-size: 8em;
+  grid-column: auto;
+}
+
+.header h1:hover {
+  color: #111893;
+  text-transform: uppercase;
+  font-weight: bolder;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+}
+
+/*NAVBAR*/
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: #111893
+}
+
+.navbar a {
+  color: white;
+  font-size: 1.75rem;
+  text-decoration: none;
+  margin: 5px;
+  line-height: 3;
+}
+
+.navbar a:hover {
+  color: #111893;
+  text-transform: uppercase;
+  font-weight: bolder;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+}
+
+/*ABOUTME*/
+.aboutHead {
+  display: flex;
+  justify-content: center;
+  margin-left: 10%;
+  font-size: 3rem;
+  width: 100%;
+}
+
+.aboutP {
+  font-size: 2rem;
+  margin-left: 6%;
+  line-height: 3rem;
+}
+
+.aboutPic {
+  float: left;
+  margin: 0 2% 5%;
+  border-radius: 25%;
+}
+
+/*PORTFOLIO*/
+.projectContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2%;
+  text-align: center;
+  margin-bottom: 10%;
+}
+
+.projectHead {
+  font-size: 2em;
+  text-align: center;
+}
+
+/*PORTFOLIO CARDS*/
+.cardBorder {
+  width: 90%;
+}
+
+.cardImg {
+  width: 85%;
+  height: 85%;
+}
+
+.cardTitle {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.cardIcon {
+  font-size: 2em;
+  margin: 0 5%;
+  color: black;
+}
+
+/*CONTACT*/
+.contactContainer {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.contactHead {
+  width: 100%;
+  font-size: 2em;
+}
+
+.contactForm {
+  width: 80%;
+  margin-left: 10%;
+  overflow: hidden;
+  margin-bottom: 1.5%;
+}
+
+.contactText {
+  width: 80%;
+  margin-left: 10%;
+  overflow: hidden;
+  height: 20em;
+  margin-bottom: 3%;
+}
+
+.contactErr {
+  color: red;
+}
+
+.contactBtn {
+  border-radius: 10%;
+  font-size: 1.2rem;
+  width: 25%;
+  margin-bottom: 5%;
+  height: 2em;
+  border-style: ridge;
+  background-color: white;
+}
+
+/*RESUME*/
+.resumeContainer {
+  display: grid;
+  margin: 0 -5% 5% 2%;
+}
+
+.resumeHead {
+  font-size: 2em;
+  grid-column: span 3;
+  margin-left: 14%;
+}
+
+.resumeSubHead {
+  font-size: 1.3em;
+}
+
+.resumeLink {
+  text-decoration: none;
+  color: black;
+  font-size: 1em;
+}
+
+.resumeBtn {
+  margin-top: 2%;
+  background: white;
+  width: 60%;
+  height: 2.5em;
+  border-style: none;
+}
+
+.resumeCenter {
+  text-align: center;
+}
+
+/*FOOTER*/
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.list {
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.list a {
+  font-size: 3.5rem;
+  color: #111893;
+}
+
+.list a:hover {
+  background-color: #111893;
+  color: white;
+  padding: 0;
+}
